--- a/src/less/index.less
+++ b/src/less/index.less
@@ -37,6 +37,15 @@
         float: left;
         margin-top: 15px;
       }
+      .music{
+        float: left;
+        width:14px;
+        height: 14px;
+        margin: 50px 0 0 5px;
+        cursor: pointer;
+        background-image: url('data:image/gif;base64,R0lGODlhDgAOAJEAAAAAAP///wB8Z////yH5BAEAAAMALAAAAAAOAA4AAAIenI+pqyKMHDySybrusw8PrH2dM4omWYbomZIsq7YFADs=');
+        background-repeat: no-repeat;
+      }
       .nav{
         float: right;
         margin-top: 50px;
@@ -99,6 +108,7 @@
         height: 20%;
         background-repeat: no-repeat;
         position: relative;
+        overflow: hidden;
         &:nth-child(1){
           background-image: url('../images/bg1.jpg');
         }
@@ -128,6 +138,7 @@
               position: relative;
               transform-style: preserve-3d;
               perspective: 2000px;
+              transition: transform 1s,opacity 1s;
               >li{
                 width:100%;
                 height:100%;
@@ -236,6 +247,36 @@
                 }
               }
             }
+            .plane1{
+              width:359px;
+              height:283px;
+              background:url(../images/plane1.png) no-repeat;
+              position:absolute;
+              left:300px;
+              top:-100px;
+              transition:1s;
+              z-index: -1;
+            }
+            .plane2{
+              width:309px;
+              height:249px;
+              background:url(../images/plane2.png) no-repeat;
+              position:absolute;
+              left:-100px;
+              top:200px;
+              transition:1s;
+              z-index: -1;
+            }
+            .plane3{
+              width:230px;
+              height:182px;
+              background:url(../images/plane3.png) no-repeat;
+              position:absolute;
+              left:300px;
+              top:400px;
+              transition:1s;
+              z-index: -1;
+            }
           }
           &.works{
             .works-title{
@@ -301,6 +342,36 @@
               background-image: url("../images/robot.png");
               animation: robot 5s infinite;
             }
+            .pencel1{
+              width:180px;
+              height:97px;
+              background:url(../images/pencel1.png) no-repeat;
+              position:absolute;
+              transition:1s;
+              left:500px;
+              top:0;
+              z-index: -1;
+            }
+            .pencel2{
+              width:268px;
+              height:38px;
+              background:url(../images/pencel2.png) no-repeat;
+              position:absolute;
+              transition:1s;
+              left:300px;
+              top:250px;
+              z-index: -1;
+            }
+            .pencel3{
+              width:441px;
+              height:231px;
+              background:url(../images/pencel3.png) no-repeat;
+              position:absolute;
+              transition:1s;
+              left:650px;
+              top:300px;
+              z-index: -1;
+            }
           }
           &.about{
             .about-title{
@@ -316,6 +387,7 @@
                 height: 200px;
                 border:5px rgba(255,255,255,0.5) solid;
                 border-radius: 8px;
+                transition: transform 1s;
                 &:first-child{
                   position: absolute;
                   left:750px;
@@ -427,8 +499,103 @@
               background-repeat: no-repeat;
             }
           }
+          &.team{
+            position: relative;
+            .team-title{
+              float: left;
+              margin: 50px;
+              width: 400px;
+              transition: transform 1s;
+            }
+            .team-text{
+              float: right;
+              margin: 50px;
+              width: 400px;
+              transition: transform 1s;
+            }
+            .team-person{
+              width: 944px;
+              height: 448px;
+              position: absolute;
+              top:230px;
+              left:50%;
+              transform: translateX(-50%);
+              li{
+                float: left;
+                width: 236px;
+                height: 100%;
+                background-image: url("../images/team.png");
+                background-repeat: no-repeat;
+                &:nth-child(1){
+                  background-position: 3px 0px;
+                }
+                &:nth-child(2){
+                  background-position: -230px 0px;
+                }
+                &:nth-child(3){
+                  background-position: -483px 0px;
+                }
+                &:nth-child(4){
+                  background-position: -710px 0px;
+                }
+              }
+            }
+          }
         }
       }
+    }
+    .side-point{
+      position: absolute;
+      right: 10px;
+      top:50%;
+      transform: translateY(-50%);
+      li{
+        width: 15px;
+        height: 15px;
+        border:1px solid white;
+        margin-top: 10px;
+        border-radius: 50%;
+        &.active{
+          background-color: white;
+        }
+      }
+    }
+  }
+  //开机动画
+  #boot-animation{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top:0;
+    left:0;
+    z-index: 10;
+    .up{
+      width:100%;
+      height: 50%;
+      background: pink;
+      position: absolute;
+      top:0;
+      left:0;
+      transition: height 3s;
+    }
+    .down{
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width:100%;
+      height: 50%;
+      background: deeppink;
+      transition: height 3s;
+    }
+    .line{
+      position: absolute;
+      top:50%;
+      left:0;
+      transform: translateY(-50%);
+      width:0;
+      height: 8px;
+      transition: width 3s;
+      background-color: white;
     }
   }
 }
